--- a/composer.json
+++ b/composer.json
@@ -23,14 +23,14 @@
     ],
     "require": {
         "php": ">=5.5.0",
-        "illuminate/console": "~5.0",
-        "illuminate/support": "~5.0",
-        "illuminate/cache": "~5.0"
+        "illuminate/console": "^5.0|^6.0|^7.0|^8.0",
+        "illuminate/support": "^5.0|^6.0|^7.0|^8.0",
+        "illuminate/cache": "^5.0|^6.0|^7.0|^8.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4.1",
+        "phpunit/phpunit": "^8.5.8|^9.3.3",
         "mockery/mockery": "dev-master",
-        "illuminate/database": "~5.0",
+        "illuminate/database": "^5.0|^6.0|^7.0|^8.0",
         "sami/sami": "dev-master"
     },
     "autoload": {
